language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_aliased_function.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  123\n}\n\npub fn main() {\n  wibble()\n}\n"
---
-- mod.gleam

import app.{wibble as other}
            ▔▔▔▔▔▔          

fn wobble() {
  other()
  ▔▔▔▔▔  
}


-- app.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  123
}

pub fn main() {
  wibble()
  ↑▔▔▔▔▔  
}
