language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_aliased_value.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub type Wibble { Wibble }\n\npub fn main() {\n  Wibble\n}\n"
---
-- mod.gleam

import app.{Wibble as Wobble}
            ▔▔▔▔▔▔           

fn wobble() {
  Wobble
  ▔▔▔▔▔▔
}


-- app.gleam

pub type Wibble { Wibble }
                  ↑▔▔▔▔▔  

pub fn main() {
  Wibble
  ▔▔▔▔▔▔
}
