language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_constant_from_import.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod.{wibble}\n\npub fn main() {\n  let value = mod.wibble\n  wibble + value\n}\n"
---
-- mod.gleam

pub const wibble = 10
          ▔▔▔▔▔▔     

fn wobble() {
  wibble
  ▔▔▔▔▔▔
}


-- app.gleam

import mod.{wibble}
            ↑▔▔▔▔▔ 

pub fn main() {
  let value = mod.wibble
                  ▔▔▔▔▔▔
  wibble + value
  ▔▔▔▔▔▔        
}
