language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_echo_are_not_shown_for_another_package.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  echo \"wibble\"\n}\n        "
---
-- app.gleam

pub fn wibble() {
  echo "wibble"
  ↑▔▔▔         
}
