language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_echo_in_current_module.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  echo \"wibble\" as \"wobble\"\n}\n\nfn wobble(a) {\n  a |> echo as \"wibble\" |> echo\n\n  echo a\n}\n        "
---
-- app.gleam

pub fn wibble() {
  echo "wibble" as "wobble"
  ↑▔▔▔                     
}

fn wobble(a) {
  a |> echo as "wibble" |> echo
       ▔▔▔▔                ▔▔▔▔

  echo a
  ▔▔▔▔  
}
