language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_echo_in_same_package.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  echo \"wibble\"\n}\n        "
---
-- woo.gleam

pub fn wubble(a, b) {
  echo a as "wibble"
  ▔▔▔▔              
  echo b
  ▔▔▔▔  
}

fn webble(a, b) {
  echo a as "wibble"
  ▔▔▔▔              
  echo b
  ▔▔▔▔  
}
            


-- app.gleam

pub fn wibble() {
  echo "wibble"
  ↑▔▔▔         
}
